# piaic-uv-assignment

./: README.md
uv_application/: README.md  main.py  pyproject.toml
uv_package_project/: README.md  pyproject.toml
uv_package_project/src/uv_package_project/: __init__.py  hello.py
